--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Dielli Alijaj</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>email:</strong> <span>diellialijaj12@gmail.com</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+38344192928</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Prishtina, Kosovo</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Prsishtina, Kosovo</span></li>
                   </ul>
                 </div>
                 <!--div class="col-lg-6">
