--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form  action="https://formspree.io/f/xqkrwldj" method="POST" class="php-email-form">
+            <form  action="https://formspree.io/f/xqkrwldj" method="POST">
               <div class="row">
                 <input type="hidden" name="recipient" id="recipient" value="diellialijaj12@gmail.com">
                 <div class="col-md-6 form-group">
@@ -442,11 +442,6 @@
               </div>
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="6" placeholder="Message" required autocomplete="off"></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
